--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,21 +5,22 @@ homepage: https://github.com/netless-io/Whiteboard-Flutter
 repository: https://github.com/netless-io/Whiteboard-Flutter
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.22.2"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview: ^5.4.4+3
-  webview_flutter: ^3.0.0
+  flutter_inappwebview: ^6.1.5
+  webview_flutter: ^4.11.0
+  webview_flutter_android: ^4.4.2
+  webview_flutter_wkwebview: ^3.20.0
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  mockito: ^5.1.0
-  build_runner: ^2.1.8
-  flutter_lints: ^1.0.4
+  mockito: ^5.4.6
 
 flutter:
   assets:
